src/app/components/compare-text/compare-text.component.scss
.compare-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
}

h1 {
    color: white;
}

mat-button-toggle {
    background-color: white;
}

.text-container {
    display: flex;
    width: 90%;
    gap: 1rem;
    margin: 1rem 0;

    * {
        width: 50%;
        height: 30vh;
        padding: 0.5rem;
        overflow-y: auto;
    }

    textarea {
        background: white;
        border: 1px solid #ccc;
    }
}

table {
    width: 90%;
    margin: 1rem 0;
    table-layout: fixed;

    td {
        white-space: pre-wrap;
        word-wrap: break-word;
        overflow-wrap: break-word;
        padding: 0.25rem;
    }

    span {
        display: inline-block;
    }
}

.info-button {
    position: absolute;
    top: 0.5rem;
    left: 0.5rem;
    color: white;
    cursor: pointer;
}

